fixed overflow issue

--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -7,6 +7,7 @@
     position: relative;
     top: 5rem;
     margin-bottom: 5rem;
+    overflow: hidden;
 
     &__background {
         position: relative;
